--- a/App2Views/Base.lproj/Main.storyboard
+++ b/App2Views/Base.lproj/Main.storyboard
@@ -9,9 +9,44 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="6XF-AW-vwX">
+            <objects>
+                <viewController id="RhZ-F0-BGp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mD0-nd-VsX">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3a5-Sb-9AF">
+                                <rect key="frame" x="94" y="479" width="240" height="413"/>
+                                <color key="backgroundColor" systemColor="tintColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QeT-84-L48">
+                                <rect key="frame" x="94" y="44" width="240" height="378"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hzw-fX-b83"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3a5-Sb-9AF" firstAttribute="top" secondItem="QeT-84-L48" secondAttribute="bottom" constant="57" id="PvI-Y5-bI5"/>
+                            <constraint firstItem="QeT-84-L48" firstAttribute="leading" secondItem="hzw-fX-b83" secondAttribute="leading" constant="94" id="bRW-jJ-aIj"/>
+                            <constraint firstItem="3a5-Sb-9AF" firstAttribute="bottom" secondItem="hzw-fX-b83" secondAttribute="bottom" id="jhC-f8-7yr"/>
+                            <constraint firstItem="hzw-fX-b83" firstAttribute="trailing" secondItem="QeT-84-L48" secondAttribute="trailing" constant="94" id="m0I-1T-Pnb"/>
+                            <constraint firstItem="hzw-fX-b83" firstAttribute="trailing" secondItem="3a5-Sb-9AF" secondAttribute="trailing" constant="94" id="mOu-49-kSc"/>
+                            <constraint firstItem="3a5-Sb-9AF" firstAttribute="leading" secondItem="hzw-fX-b83" secondAttribute="leading" constant="94" id="ml4-cT-JFK"/>
+                            <constraint firstItem="3a5-Sb-9AF" firstAttribute="height" secondItem="QeT-84-L48" secondAttribute="height" multiplier="1.09259" id="tuV-2P-2Ow"/>
+                            <constraint firstItem="QeT-84-L48" firstAttribute="top" secondItem="hzw-fX-b83" secondAttribute="top" id="xIw-Ph-bzP"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yXT-FZ-ivf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-775.23364485981301" y="79.697624190064801"/>
+        </scene>
+        <!--View Controller Second-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="App2Views" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewControllerSecond" customModule="App2Views" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" semanticContentAttribute="spatial" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -61,8 +96,14 @@
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
